--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ plotly==5.15.0
 scikit-learn==1.3.0
 statsmodels==0.14.0
 prophet==1.1.4
-tensorflow==2.13.0
+tensorflow==2.12.0
 yfinance==0.2.18
 ta==0.10.2
+setuptools
